Bug 410121 - No layout support for component diagrams
Summary: No layout support for component diagrams
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.28.3 (KDE Applications 19.04.3)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-22 22:03 UTC by Ralf Habacker
Modified: 2019-07-22 22:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.28.90 (KDE Applications 19.07.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-07-22 22:03:38 UTC
STEPS TO REPRODUCE
1. start umbrello
2. add a component diagram
3. open context menu

OBSERVED RESULT
There are no entries for auto layout


EXPECTED RESULT
There should be entries for auto layouting
Comment 1 Ralf Habacker 2019-07-22 22:16:43 UTC
Git commit 95ba9362608df009f74568487ff3b5ac99db5abe by Ralf Habacker.
Committed on 22/07/2019 at 22:15.
Pushed by habacker into branch 'Applications/19.08'.

Fix 'No layout support for component diagrams'

Compared to other diagrams, component diagrams contain additional hidden
connections between port and components that must be considered by the
layout engine. These connections can be configured with the attributes
"visual::type::<typeA>::<typeB> and "ranking::type::<typeA>::<typeB>".

When positioning widgets, ports must be omitted because they are
positioned by the parent widget.

Followup for commit 81d2f1cd4a15600db9d1914b54febc1b8dc14591.
FIXED-IN:2.28.90 (KDE Applications 19.07.80)

M  +2    -0    umbrello/layoutgenerator.cpp
M  +6    -6    umbrello/layouts/component-horizontal.desktop
M  +6    -6    umbrello/layouts/component-vertical.desktop

https://commits.kde.org/umbrello/95ba9362608df009f74568487ff3b5ac99db5abe