Fix 'No layout support for component diagrams'

Compared to other diagrams, component diagrams contain additional hidden
connections between port and components that must be considered by the
layout engine. These connections can be configured with the attributes
"visual::type::<typeA>::<typeB> and "ranking::type::<typeA>::<typeB>".

When positioning widgets, ports must be omitted because they are
positioned by the parent widget.

Followup for commit 81d2f1cd4a15600db9d1914b54febc1b8dc14591.

BUG:410121
FIXED-IN:2.28.90 (KDE Applications 19.07.80)